2013-08-29  Teresa Johnson  <tejohnson@google.com>

	* dumpfile.c (dump_loc): Output column number.
	* dumpfile.h (OPTGROUP_OTHER): Add and enable under OPTGROUP_ALL.
	* doc/invoke.texi: Document optall -fopt-info flag.
	* profile.c (read_profile_edge_counts): Use new dump framework.
	(compute_branch_probabilities): Ditto.
	* passes.c (pass_manager::register_one_dump_file): Use OPTGROUP_OTHER
	when pass not in any opt group.
	* pass_manager.h (pass_manager::get_pass_profile): New method.
	* value-prof.c (check_counter): Use new dump framework.
	(check_ic_target): Ditto.
	* coverage.c (get_coverage_counts): Ditto.
	(coverage_init): Setup new dump framework.

	* testsuite/gcc.dg/pr40209.c: Use -fopt-info.
	* testsuite/gcc.dg/pr26570.c: Ditto.
	* testsuite/gcc.dg/pr32773.c: Ditto.
	* testsuite/g++.dg/tree-ssa/dom-invalid.C: Ditto.
	* testsuite/gcc.dg/inline-dump.c: New test.

2013-08-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58246
	* tree-ssa-dce.c (mark_aliased_reaching_defs_necessary_1): Properly
	handle the dominance check inside a basic-block.

2013-08-29  Richard Biener  <rguenther@suse.de>

	PR middle-end/57287
	* tree-ssa-copy.c (may_propagate_copy): Allow propagating
	of default defs that appear in abnormal PHI nodes.

2013-08-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57685
	* tree-vrp.c (register_edge_assert_for_1): Recurse only for
	single-use operands to avoid exponential complexity.

2013-08-28  Dehao Chen  <dehao@google.com>

	* ipa-inline.c (edge_badness): Fix integer underflow.

2013-08-28  Uros Bizjak  <ubizjak@gmail.com>

	* gtm-builtins.def (_ITM_free): Declare leaf.

2013-08-28  Jakub Jelinek  <jakub@redhat.com>

	PR target/58067
	* config/i386/i386.md (*tls_global_dynamic_64_largepic): New insn.
	(*tls_local_dynamic_base_64_largepic): Likewise.
	(tls_global_dynamic_64_<mode>, tls_local_dynamic_base_64_<mode>):
	Remove predicate from call operand.