@@ -37,7 +37,7 @@ linux_android_libc_has_function (enum function_class fn_class)
 {
   if (OPTION_GLIBC)
     return true;
-  if (OPTION_BIONIC)
+  /*if (OPTION_BIONIC)*/
     if (fn_class == function_c94
 	|| fn_class == function_c99_misc
 	|| fn_class == function_sincos)
